search result z-index fix

--- a/search.scss
+++ b/search.scss
@@ -6,6 +6,7 @@
 		width: 100%;
 		background: #fff;
 		border: 1px solid #ccc;
+		z-index: 10;
 
 		.suggestion {
 			@include font_size(12);
